Fix grid responsiveness

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Castanho Correia
 email: me@castanhocorreia.com
+description: "Castanho Correia. I am a software engineer, specialized in backend development within the Java Virtual Machine (JVM) Ecosystem, mainly using Java and Kotlin languages, and application frameworks such as Spring Boot, Spring MVC and Java/Jakarta EE."
 baseurl: ""
 url: "https://castanhocorreia.com"
 permalink: pretty
