--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Castanho Correia
+title: J. Castanho Correia
 email: me@castanhocorreia.com
 description: "Castanho Correia. I am a software engineer, specialized in backend development within the Java Virtual Machine (JVM) Ecosystem, mainly using Java and Kotlin languages, and application frameworks such as Spring Boot, Spring MVC and Java/Jakarta EE."
 baseurl: ""
@@ -16,7 +16,7 @@ collections:
 sass:
   sass_dir: _sass
   style: :compressed
-plugins:  
+plugins:
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-sitemap
