--- a/_data/work.yml
+++ b/_data/work.yml
@@ -1,52 +1,88 @@
-- company: "ioasys"
-  description: "Innovation Oasys is a software consulting company in Brazil, specialized in the creation and development of applications and other components of the digital universe. Through ioasys, I had the opportunity to be allocated in the Notifications Engine project for CVC CORP, in addition to performing some other internal tasks for the company"
+- company: "Mercado Libre"
+  description:
   end_date: false
-  location: "Belo Horizonte, Brazil"
-  position: "Software Engineer"
-  projects:
-    - company: "CVC CORP"
-      description: "CVC is the largest tourism company in Latin America. As a Java developer and tech lead I was hired to be part of the idealization and development of an engine that aims to handle thousands of notifications for thousands of internal users and customers on a daily basis in a complex microservices architecture that revolves around Spring Boot, MongoDB, Apache Kafka, Kubernetes and more"
-      name: "Notifications Engine"
-      url: "https://www.cvccorp.com.br/"
+  location: "Montevideo, Uruguay · Remote"
+  position: "SSr. Software Engineer"
+  remote: true
+  start_date: "2023-03-20"
+  type: "Full-time"
+  url: "https://www.mercadolibre.com"
+
+- company: "ioasys"
+  description:
+    - Participated in sourcing, interviewing, hiring candidates
+    - Performed knowledge transfers on Java 11-19, Golang, Querydsl, BDD and artificial intelligence
+    - Allocated in <a href="https://www.cvccorp.com.br/" target="_blank">CVC Corp's</a> Communications project:
+      - Assumed a technical lead position and was responsible for providing technical leadership, defining the project's architecture, and managing the delivery of an engine that met the company's communication needs
+      - Designed and implemented a fully event-driven infrastructure from scratch
+      - Refactored a templating tool, significantly reducing template registration time
+      - Managed code reviews and approvals, as well as weekly deployments of applications
+      - Collaborated with product managers to define project directions and worked with support to investigate client issues
+      - Did code health improvements (eliminating tech debt, improving development workflow) and participated in interviewing potential candidates and helped with onboarding of new team members
+      - Assisted others with complicated tasks through pair programming and documented project structure, project-specific code conventions, technical decisions, and troubleshooting
+    - Allocated in <a href="https://www.cvccorp.com.br/" target="_blank">CVC Corp's</a> Extranet project:
+      - Helped refactor part of a thirty-year-old legacy monolith into a modern microservices architecture and designed architectural proposals and project improvements
+      - Helped with integrations with the Opportunities (Pricing) team
+  end_date: "2023-03-20"
+  location: "Belo Horizonte, Minas Gerais, Brazil · Remote"
+  position: "Sr. Software Engineer"
   remote: true
   start_date: "2022-01-01"
   type: "Full-time"
   url: "https://ioasys.com.br/"
 
 - company: "Kontulari"
-  description: "Kontulari is a fintech company that provides accounting services for small businesses. The constant challenges there were the integration with various external systems linked to the business rules and government agencies. There, I had the opportunity to plan and participate in a project to refactor a single monolith in an exciting microservices architecture"
+  description:
+    - Participated and emerged victorious in the company's inaugural hackathon
+    - Worked on refactoring legacy codebase
+    - Implemented integrations with external accounting providers
+    - Gave a presentation exposing several security flaws in the application
+    - Worked on security-related features
   end_date: "2022-01-01"
-  location: "Salvador, Brazil"
+  location: "Salvador, Bahia, Brazil · Hybrid"
   position: "Systems Developer Analyst"
   remote: false
-  start_date: "2021-11-01"
+  start_date: "2021-10-01"
   type: "Full-time"
   url: "https://kontulari.com.br/"
 
-- company: "Warsztat RPG"
-  description: "Warsztat was a RPG content distributor for Germany and Poland. I worked on a Call of Cthulhu system integration project for Foundry Virtual Tabletop, using technologies such as Handlebars, Sass, JavaScript, TypeScript, jQuery, Node.js, Webpack, and Gulp. In addition to development and bug fixes, I did code maintenance, review and versioning"
+- company: "Chaosium"
+  description:
+    - Had daily meetings with product managers to define software requirements
+    - Successfully extracted complex rules from RPG books into an automated web system
+    - Built and developed setup simplifications and improvements
+    - Did code reviews and approved merge requests
+    - Designed and implemented an automated versioning project
   end_date: "2022-10-01"
-  location: "Berlin, Germany"
+  location: "Hayward, California, United States · Remote"
   position: "Software Developer"
   remote: true
-  start_date: "2022-06-01"
+  start_date: "2022-07-01"
   type: "Freelance"
-  url: "https://github.com/Miskatonic-Investigative-Society"
-  
+  url: "https://www.chaosium.com/"
+
 - company: "Fiverr"
-  description: "Fiverr is an online platform for freelancers to offer services to customers worldwide. There, I completed nearly a dozen commission projects around technologies such as Java and Kotlin, Spring Boot, MySQL, PostgreSQL, and sometimes React.js and Next.js"
+  description:
+    - Participated in the full software development lifecycle on multiple projects
+    - Worked on database optimization, significantly improving query performance against relational databases
+    - Contributed to the implementation of deployment automations
+    - Developed integrations with external APIs, expanding the functionality of applications
+    - Investigated and resolved customer issues
   end_date: "2021-10-01"
-  location: "Tel Aviv, Israel"
+  location: "Tel Aviv, Israel · Remote"
   position: "Software Developer"
   remote: true
-  start_date: "2020-12-01"
+  start_date: "2020-03-01"
   type: "Freelance"
   url: "https://www.fiverr.com/"
 
 - company: "PGFN"
-  description: "Procuradoria-Geral da Fazenda Nacional (National Treasury Attorney's Office) is part of Brazilian judicial administration. As an intern, I had experience with internal tax collection, debt management, and judicial litigation systems and other legal proceedings, as well as experience related to legacy systems of justice departments, creation of procedural documents, and process automation"
+  description:
+  - Had contact with tax collection, debt management and judicial litigation systems
+  - Helped improve communication and collaboration between legal teams and other departments and implemented automation solutions to reduce manual errors and improve efficiency in various processes
+  - Conducted regular audits and performance evaluations to ensure automation solutions continue to meet business needs
   end_date: "2020-03-01"
-  location: "Salvador, Brazil"
+  location: "Salvador, Bahia, Brazil · On-site"
   position: "Intern"
   remote: false
   start_date: "2018-08-01"
