--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+  schedule:
+    - cron:  '0 * * * *'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
