--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '0 0 1 * *'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
